Autocomplete.java made into StringBuilder and ArrayList hopefully it's fast enough now???